# stresstestcpu

./: .gitignore  Cargo.toml  PKGBUILD  README.md
.github/workflows/: ci.yml
src/: main.rs
